--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^3.4.17",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
